--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "^6.19.1",
+    "dotenv": "^17.2.3",
+    "prisma": "^6.19.1"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.3"
+  }
 }
